--- a/consultas.html
+++ b/consultas.html
@@ -124,8 +124,8 @@
     <!-- Header Section End -->
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-4">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="blog__details__hero set-bg" data-setbg="img/blog/details/blog-hero3.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-7 text-center">
@@ -153,7 +153,7 @@
                                 </div>
                             </div>
 
-                            <h3>Atendimento Personalizado para Suas Necessidades de Saúde. <br>
+                            <h3>Atendimento personalizado para as suas necessidades de saúde. <br>
                             </h3>
                         </div>
                     </div>
