--- a/humanitario.html
+++ b/humanitario.html
@@ -102,8 +102,8 @@
     </header>
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details  mb-0 spad mt-4">
-        <div class="container mt-9">
+    <section class="blog-details  mb-0 spad mt-9">
+        <div class="container">
             <div class="blog__details__hero set-bg mb-2" data-setbg="img/hm/cover.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                         <div class="col-lg-7 text-center">
