--- a/pages/Psicologia.html
+++ b/pages/Psicologia.html
@@ -112,11 +112,11 @@
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
-                            <span id="showe" class="h6"> <i class="fa fa-clock-o"></i> Duração: 30mn | <i
+                            <span id="showe" class="h6"> <i class="fa fa-clock-o"></i> Duração: 30min | <i
                                     class="fa fa-user"></i>
                                 presencial
                             </span>
-                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 60mn | <i id="mn"
+                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 60min | <i id="mn"
                                     class="fa fa-user"> presencial</i>
                                 |
                                 <i class="fa fa-desktop"></i> Online
@@ -133,9 +133,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold">
+                                        <h2 id="title" class="subtitle fw-bold mb-4 mt-4">
                                         </h2>
-                                        <h5 class="mb-0 mt-2 h4"><b id="subtitulo">Uma Pediatra não é uma médica como as
+                                        <h5 class=" h4"><b id="subtitulo">Uma Pediatra não é uma médica como as
                                                 outras, é
                                                 alguém que acompanha toda a família!</b></h5>
                                     </div>
@@ -925,7 +925,7 @@
             doutora.textContent = "Dra Joana Costa";
             title.textContent = "Consulta de Psicologia do Adolescente e criança";
             subtitulo.textContent = "Vamos enfrentar juntos os desafios da vida, um pensamento de cada vez!";
-            img.src = "../img/blog/details/blog-hero10.jpg";
+            img.src = "../img/blog/details/consulta_de_psicologia_do_adolescente_e_da_infancia.jpg";
             window.scrollTo({ top: 0, behavior: 'smooth' });
         }
 
@@ -968,7 +968,7 @@
             EDiv.classList.add('displayidr');
             showe.style.display = 'none';
             title.textContent = "Terapia de Casal e Familiar";
-            mn.textContent = " A 90mn";
+            mn.textContent = " A 90min";
             subtitulo.textContent = "Vamos enfrentar juntos os desafios da vida, um pensamento de cada vez!";
             img.src = "../img/blog/details/nutrio-infant.jpg";
             window.scrollTo({ top: 0, behavior: 'smooth' });
