--- a/pages/politica.html
+++ b/pages/politica.html
@@ -182,7 +182,7 @@
 
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-9">
-        <div class="container mt-9">
+        <div class="container">
             <div class="blog__details__hero set-bg mb-2" data-setbg="../img/blog/details/privacy.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                         <div class="col-lg-7 text-center">
