--- a/pages/teste.html
+++ b/pages/teste.html
@@ -92,8 +92,8 @@
 
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-6">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="services__details__pic">
                 <div class="services__details__pic">
                     <img id="img" src="../img/blog/details/blog-hero4.jpg" alt="">
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
-                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 5mn | <i class="fa fa-user"></i>
+                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 5min | <i class="fa fa-user"></i>
                                 presencial
                             </span>
 
@@ -128,9 +128,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold">
+                                        <h2 id="title" class="subtitle fw-bold mb-4 mt-4">
                                         </h2>
-                                        <h5 class="mb-4 mt-2 h4"><b id="subtitulo">A comodidade de ter um teste
+                                        <h5 class=" h4"><b id="subtitulo">A comodidade de ter um teste
                                                 diagnóstico em sua casa
                                                 é
                                                 impagável.</b></h5>
@@ -432,7 +432,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
                     <div class="row">
                         <div class="card shadow" style="background-image: url('../img/bg1.png');">
                             <div class="card-more">
