--- a/team.html
+++ b/team.html
@@ -132,8 +132,8 @@
     <!-- Header Section End -->
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-4">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="blog__details__hero set-bg" data-setbg="img/blog/details/blog-hero2.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-7 text-center">
@@ -326,7 +326,7 @@
                                 <div class="inner">
                                     <a href="pages/team-sing.html#I">
                                         <div class="team-img">
-                                            <img src="img/team/team-8.jpg" alt="Member Photo">
+                                            <img src="img/team/team-15.jpg" alt="Member Photo">
                                         </div>
                                         <div class="team-content d-grid justify-items-center justify-content-center">
                                             <h4 class="mb-2">Dra Marina Pastore</h4>
