--- a/about.html
+++ b/about.html
@@ -123,8 +123,8 @@
     <!-- Header Section End -->
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-4">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="blog__details__hero set-bg" data-setbg="img/blog/details/a_clinica_sobre_nós.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-7 text-center">
