--- a/blank.html
+++ b/blank.html
@@ -26,8 +26,39 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <style>
+        .carousel-wrapper {
+            position: relative;
+            overflow: hidden;
+            width: 100%;
+        }
 
+        .carousel-track {
+            display: flex;
+            transition: transform 0.5s ease;
+            gap: 20px;
+        }
+
+        .carousel-controls {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .carousel-controls button {
+            padding: 10px 20px;
+            margin: 0 10px;
+            background: #007bff;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .card {
+            min-width: 300px;
+            max-width: 300px;
+        }
     </style>
+
 </head>
 
 <body>
@@ -297,6 +328,46 @@
 
     </header>
     <!-- Header Section End -->
+    <section class="testimonials">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-title">
+                        <h2><i>A Clínica</i> nas Redes Sociais</h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel-wrapper">
+                <div class="carousel-track" id="carouselTrack">
+                    <!-- CARDS COMEÇAM AQUI -->
+                    <a target="_blank" href="https://www.instagram.com/aclinica.mz/p/DIGqiErCdTG/">
+                        <div class="card">... conteúdo ...</div>
+                    </a>
+                    <a target="_blank" href="https://www.instagram.com/p/DIQYLHrieeT/">
+                        <div class="card">... conteúdo ...</div>
+                    </a>
+                    <a target="_blank" href="https://www.instagram.com/aclinica.mz/p/DH_ndcaCIBF/">
+                        <div class="card">... conteúdo ...</div>
+                    </a>
+                    <!-- CARDS TERMINAM AQUI -->
+                </div>
+            </div>
+
+            <div class="carousel-controls">
+                <button onclick="moveCarousel(-1)">Anterior</button>
+                <button onclick="moveCarousel(1)">Próximo</button>
+            </div>
+
+            <div class="col-lg-12 text-center mt-4">
+                <div class="load__more">
+                    <a href="https://www.instagram.com/aclinica.mz/" class="primary-btn">
+                        <i class="fa fa-instagram p-2"></i> Não perca as novidades: Siga-nos
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Seção de Rodapé Início -->
     <footer class="footer">
@@ -400,6 +471,24 @@
         </div>
     </footer>
     <!-- Seção de Rodapé Fim -->
+    <script>
+        let currentIndex = 0;
+
+        function moveCarousel(direction) {
+            const track = document.getElementById('carouselTrack');
+            const cardWidth = track.querySelector('.card').offsetWidth + 20; // 20 = margem
+            const cardsTotal = track.querySelectorAll('.card').length;
+
+            currentIndex += direction;
+
+            // limitar
+            if (currentIndex < 0) currentIndex = 0;
+            if (currentIndex > cardsTotal - 1) currentIndex = cardsTotal - 1;
+
+            const offset = currentIndex * cardWidth;
+            track.style.transform = `translateX(-${offset}px)`;
+        }
+    </script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
