--- a/index.html
+++ b/index.html
@@ -361,130 +361,130 @@
                 <article>
                     <!-- Dias da Semana -->
                     <ul class="days">
-                        <li>1ª Semana:<br> 1 a 7 de maio</li>
-                        <li>2ª Semana:<br> 8 a 14 de maio</li>
-                        <li>3ª Semana:<br> 15 a 21 de maio</li>
-                        <li>4ª Semana:<br> 22 a 28 de maio</li>
-                        <li>5ª Semana:<br> 29 de maio a 4 de junho</li>
-                        <li>6ª Semana:<br> 5 a 11 de junho</li>
-                        <li>6ª Semana:<br> 12 a 19 de junho</li>
+                        <li>1ª Semana Abril</li>
+                        <li>2ª Semana Abril</li>
+                        <li>3ª Semana Abril</li>
+                        <li>4ª Semana Abril</li>
+                        <li>1ª Semana Junho</li>
+                        <li>2ª Semana Junho</li>
+                        <li>3ª Semana Junho</li>
                     </ul>
 
                     <!-- Datas e Eventos -->
                     <ul class="dates">
                         <!-- Semana 1 -->
-                        <li class="fade"><span class="date">30</span></li>
-                        <li><span class="date">1</span>
+                        <li class="fade"></li>
+                        <li>
                             <a href="#" class="meeting-2">
                                 <b>Workshop:</b> Amamentação
                             </a>
                         </li>
-                        <li><span class="date">2</span></li>
-                        <li><span class="date">3</span></li>
-                        <li><span class="date">4</span>
+                        <li></li>
+                        <li></li>
+                        <li>
                             <a href="#" class="meeting">
                                 <b>Curso:</b> Preparação para a Amamentação
                             </a>
                         </li>
-                        <li><span class="date">5</span>
+                        <li>
                             <a href="#" class="meeting-2">
                                 <b>Promoção:</b> Pediatria 10% OFF
                             </a>
                         </li>
-                        <li><span class="date">6</span></li>
+                        <li></li>
 
                         <!-- Semana 2 -->
-                        <li><span class="date">7</span>
+                        <li>
                             <a href="#" class="meeting">
                                 <b>Workshop:</b> Introdução Alimentar
                             </a>
                         </li>
-                        <li><span class="date">8</span>
+                        <li>
                             <a href="#" class="meeting-2">
                                 <b>Curso:</b> Nutrição Pré-natal
                             </a>
                         </li>
-                        <li><span class="date">9</span></li>
-                        <li><span class="date">10</span>
+                        <li></li>
+                        <li>
                             <a href="#" class="meeting">
                                 <b>Curso:</b> Exercício Físico na Gravidez
                             </a>
                         </li>
-                        <li><span class="date">11</span></li>
-                        <li><span class="date">12</span>
+                        <li></li>
+                        <li>
                             <a href="#" class="meeting-2">
                                 <b>Workshop:</b> Primeiros Socorros
                             </a>
                         </li>
-                        <li><span class="date">13</span></li>
+                        <li></li>
 
                         <!-- Semana 3 -->
-                        <li><span class="date">14</span>
+                        <li>
                             <a href="#" class="meeting">
                                 <b>Curso:</b> Diabetes Gestacional
                             </a>
                         </li>
-                        <li><span class="date">15</span>
+                        <li>
                             <a href="#" class="meeting-2">
                                 <b>Curso:</b> Nutrição Pré-conceção
                             </a>
                         </li>
-                        <li><span class="date">16</span>
+                        <li>
                             <a href="#" class="meeting">
                                 <b>Workshop:</b> Preparação para o Parto
                             </a>
                         </li>
-                        <li><span class="date">17</span></li>
-                        <li><span class="date">18</span></li>
-                        <li><span class="date">19</span>
+                        <li></li>
+                        <li></li>
+                        <li>
                             <a href="#" class="meeting-2">
                                 <b>Curso:</b> Snoezelen na Gravidez
                             </a>
                         </li>
-                        <li><span class="date">20</span>
+                        <li>
                             <a href="#" class="meeting">
                                 <b>Workshop:</b> Amamentação (em inglês)
                             </a>
                         </li>
 
                         <!-- Semana 4 -->
-                        <li><span class="date">21</span></li>
-                        <li><span class="date">22</span>
+                        <li></li>
+                        <li>
                             <a href="#" class="meeting-2">
                                 <b>Curso:</b> Exercício na Gravidez
                             </a>
                         </li>
-                        <li><span class="date">23</span></li>
-                        <li><span class="date">24</span>
+                        <li></li>
+                        <li>
                             <a href="#" class="meeting">
                                 <b>Workshop:</b> Cuidados na Gravidez
                             </a>
                         </li>
-                        <li><span class="date">25</span></li>
-                        <li><span class="date">26</span>
+                        <li></li>
+                        <li>
                             <a href="#" class="meeting-2">
                                 <b>Promoção:</b> Consulta Pré-natal 10% OFF
                             </a>
                         </li>
-                        <li><span class="date">27</span></li>
+                        <li></li>
 
                         <!-- Semana 5 -->
-                        <li><span class="date">28</span>
+                        <li>
                             <a href="#" class="meeting">
                                 <b>Curso:</b> Parentalidade
                             </a>
                         </li>
-                        <li><span class="date">29</span>
+                        <li>
                             <a href="#" class="meeting-2">
                                 <b>Workshop:</b> Cuidados Pediátricos
                             </a>
                         </li>
-                        <li><span class="date">30</span>
+                        <li>
                             <a href="#" class="meeting">
                                 <b>Encerramento:</b> Encontro com a Pediatria
                             </a>
                         </li>
-                        <li><span class="date">31</span></li>
+                        <li></li>
                     </ul>
 
 
@@ -502,7 +502,7 @@
                 <!-- Ponto vermelho (Cursos/Aulas) -->
                 <div class="d-flex align-items-center me-4 mr-4">
                     <span class=""
-                        style="background-color: #d6a294; width: 20px; height: 20px; border-radius: 50%; margin-right: 10px;"></span>
+                        style="background-color: #b1cad4 ; width: 20px; height: 20px; border-radius: 50%; margin-right: 10px;"></span>
                     <span class="ms-2">Cursos/Aulas</span>
                 </div>
 
@@ -511,13 +511,6 @@
                     <span class=""
                         style="background-color: #cfdbab; width: 20px; height: 20px; border-radius: 50%;  margin-right: 10px;"></span>
                     <span class="ms-2">Workshops</span>
-                </div>
-
-                <!-- Ponto azul (Atividades pós parto) -->
-                <div class="d-flex align-items-center  mr-4">
-                    <span class=""
-                        style="background-color: #808080; width: 20px; height: 20px; border-radius: 50%; margin-right: 10px;"></span>
-                    <span class="ms-2">Atividades pós parto</span>
                 </div>
             </div>
         </div>
