--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -125,11 +125,10 @@
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
-                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 60mn | <i class="fa fa-user"></i>
+                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 60min | <i class="fa fa-user"></i>
                                 presencial |
                                 <i class="fa fa-desktop"></i> Online
                             </span>
-
                         </div>
                     </div>
                 </div>
