--- a/pages/cirurgia.html
+++ b/pages/cirurgia.html
@@ -102,8 +102,8 @@
 
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-6">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="blog__details__hero set-bg mb-0" data-setbg="../img/blog/details/blog-hero5.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-7 text-center">
