--- a/pages/domicilio.html
+++ b/pages/domicilio.html
@@ -112,36 +112,15 @@
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
-                            <span id="showe" class="h6"> <i class="fa fa-clock-o"></i> Duração: 60mn | <i
+                            <span id="showe" class="h6"> <i class="fa fa-clock-o"></i> Duração: 60min | <i
                                     class="fa fa-user">
                                     presencial</i> |
                                 <i class="fa fa-desktop"></i> Online
                             </span>
-                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 40mn a 90mn <i
+                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 40min a 90min <i
                                     class="fa fa-user">
                                     presencial</i>
                             </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-12">
-                    <div class="ml-4 mr-4">
-                        <div class="blog__details__text__item">
-                            <!-- Título da Seção -->
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="section-title">
-                                        <h3 id="Consulta" class="subtitle fw-bold">
-                                        </h3>
-                                        <h5 class="mt-2 h4"><b id="subtitulo">Deve ter todo o apoio que precisa no
-                                                conforto do seu
-                                                lar
-                                                durante a sua jornada de amamentação!</b></h5> <br>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -152,6 +131,25 @@
 
     <section class="services  set-bg">
         <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col-lg-12">
+                    <div class="ml-4 mr-4">
+                        <div class="blog__details__text__item">
+                            <!-- Título da Seção -->
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h3 id="Consulta" class="subtitle fw-bold mt-4 mb-4 ">
+                                    </h3>
+                                    <h5 class="h4"><b id="subtitulo">Deve ter todo o apoio que precisa no
+                                            conforto do seu
+                                            lar
+                                            durante a sua jornada de amamentação!</b></h5> <br>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id="Cirurgia">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
@@ -180,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
                     <div class="row">
                         <div class="card shadow" style="background-image: url('../img/bg3.png');">
                             <div class="card-more">
@@ -246,7 +244,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
                     <div class="row">
                         <div class="card shadow" style="background-image: url('../img/bg3.png');">
                             <div class="card-more">
@@ -311,7 +309,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
                     <div class="row">
                         <div class="card shadow" style="background-image: url('../img/bg3.png');">
                             <div class="card-more">
