--- a/pages/enfermagem.html
+++ b/pages/enfermagem.html
@@ -106,11 +106,11 @@
 
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-6">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="services__details__pic">
                 <div class="services__details__pic">
-                    <img src="../img/blog/details/blog-hero6.jpg" alt="">
+                    <img id="img" src="../img/blog/details/blog-hero6.jpg" alt="">
                     <div id="show" class="services__details__content">
                         <div class="d-flex w-100 align-items-end">
                             <div class="mr-3">
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
-                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 60mn | <i class="fa fa-user"></i>
+                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 60min | <i class="fa fa-user"></i>
                                 presencial
                             </span>
 
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
-                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 30mn | <i class="fa fa-user"></i>
+                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 30min | <i class="fa fa-user"></i>
                                 presencial
                             </span>
 
@@ -161,7 +161,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="Consulta" class="mb-2 subtitle fw-bolder">Enfermagem
+                                        <h2 id="Consulta" class="mb-4 subtitle fw-bolder">Enfermagem
                                         </h2>
                                         <h5 class="h4"><b id="subtitulo">O cuidado do seu recém-nascido na comodidade da
                                                 sua casa.</b>
@@ -481,6 +481,7 @@
         const hidden = document.getElementById('hidden');
         const subtitulo = document.getElementById('subtitulo');
         const texto = document.getElementById('texto');
+        const img = document.getElementById('img');
 
         // Função para exibir a consulta Cirurgia
         function showCirurgia() {
@@ -503,6 +504,7 @@
             suturaDiv.style.display = 'none';
             CirurgiaDiv.style.display = 'none';
             subtitulo.textContent = "Cuidar dos pacientes com amor é o que distingue a nossa equipa de Enfermagem!";
+            img.src = "../img/blog/details/Consulta-de-Enfermagem.jpg"; // Atualiza o texto para "Cirurgia"
             consultaText.textContent = "Consulta de Enfermagem";
             anelBtn.classList.add("active");
             CirurgiaBtn.classList.remove("active");
@@ -519,6 +521,7 @@
             CirurgiaDiv.style.display = 'none';
             subtitulo.textContent = "Quando precisar de uma mudança de penso, pode fazê-lo n’A Clínica.";
             consultaText.textContent = "Pensos";
+            img.src = "../img/blog/details/Consulta-pensos.jpg"; // Atualiza o texto para "Cirurgia"
             texto.textContent = "O cuidado das lesões da pele pode necessitar as mãos de um profissional. A nossa equipa de Enfermagem tem a experiência para fazê-lo da forma mais adequada.";
             suturaBtn.classList.add("active");
             anelBtn.classList.remove("active");
