--- a/pages/gravidez.html
+++ b/pages/gravidez.html
@@ -92,8 +92,8 @@
 
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-6">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div id="img" class="blog__details__hero set-bg mb-0" data-setbg="../img/blog/details/amigdalite.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-7 text-center">
@@ -121,9 +121,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold">
+                                        <h2 id="title" class="subtitle fw-bold mt-4 mb-4 ">
                                         </h2>
-                                        <h5 class="mt-2 mb-4  h4"><b id="subtitulo">A diabetes gestacional afeta cada
+                                        <h5 class=" h4"><b id="subtitulo">A diabetes gestacional afeta cada
                                                 vez
                                                 mais grávidas,
                                                 podendo
@@ -451,7 +451,7 @@
             DDiv.style.display = 'none';  // Esconde a div pós-parto
             EDiv.style.display = 'none';  // Esconde a div pós-parto
             title.textContent = "Diabetes Gestacional:"; // Atualiza o texto para "Cirurgia"
-            subtitulo.textContent = "A diabetes gestacional afeta cada vez mais grávidas, podendo ter consequências importantes tanto para a mãe como para o bebé.:"; // Atualiza o texto para "Cirurgia"
+            subtitulo.textContent = "A diabetes gestacional afeta cada vez mais grávidas, podendo ter consequências importantes tanto para a mãe como para o bebé."; // Atualiza o texto para "Cirurgia"
             img.style.backgroundImage = "url('../img/blog/details/diabetes_gestacional.jpg')"; // Atualiza o texto para "Cirurgia"
             ABtn.classList.add("active");
             BBtn.classList.remove("active");
