--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -92,8 +92,8 @@
 
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-6">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="services__details__pic">
                 <div class="services__details__pic">
                     <img id="img" src="../img/blog/details/nutrio.jpg" alt="">
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
-                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 60mn | <i class="fa fa-user"></i>
+                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 60min | <i class="fa fa-user"></i>
                                 presencial |
                                 <i class="fa fa-desktop"></i> Online
                             </span>
@@ -127,7 +127,7 @@
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-12">
-                    <div class="ml-4 mr-4">
+                    <div class="ml-4 mr-4 mb-4">
                         <div class="blog__details__text__item">
                             <!-- Título da Seção -->
                             <div class="row">
@@ -431,7 +431,7 @@
                     </div>
                 </div>
             </div>
-            <div id="D" class="col-lg-8 col-md-8">
+            <div id="D">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
