--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -112,11 +112,11 @@
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
-                            <span id="showe" class="h6"> <i class="fa fa-clock-o"></i> Duração: 30mn | <i
+                            <span id="showe" class="h6"> <i class="fa fa-clock-o"></i> Duração: 30min | <i
                                     class="fa fa-user"></i>
                                 presencial
                             </span>
-                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 60mn | <i id="mn"
+                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 60min | <i id="mn"
                                     class="fa fa-user"> presencial</i>
                                 |
                                 <i class="fa fa-desktop"></i> Online
@@ -133,9 +133,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold">
+                                        <h2 id="title" class="subtitle fw-bold mt-4">
                                         </h2>
-                                        <h5 class="mb-0 mt-2 h4"><b id="subtitulo">Uma Pediatra não é uma médica como as
+                                        <h5 class="mb-0 mt-4 h4"><b id="subtitulo">Uma Pediatra não é uma médica como as
                                                 outras, é
                                                 alguém que acompanha toda a família!</b></h5>
                                     </div>
@@ -846,7 +846,7 @@
             EDiv.style.display = 'none';
             showe.style.display = 'none';
             title.textContent = "Consulta de Sono Infantil";
-            subtitulo.textContent = "O sono é fundamental para a saúde do seu filhote";
+            subtitulo.textContent = "O sono é fundamental para a saúde do seu filhote.";
             img.src = "../img/blog/details/sono.jpg";
             window.scrollTo({ top: 0, behavior: 'smooth' });
         }
@@ -860,7 +860,7 @@
             EDiv.classList.add('displayidr');
             showe.style.display = 'none';
             title.textContent = "Consulta de Pediatria de Introdução Alimentar";
-            mn.textContent = " A 90mn";
+            mn.textContent = " A 90min";
             subtitulo.textContent = "A fase da diversificação alimentar é uma aventura que tem implicações para toda a vida!";
             img.src = "../img/blog/details/nutrio-infant.jpg";
             window.scrollTo({ top: 0, behavior: 'smooth' });
