--- a/pages/team-sing.html
+++ b/pages/team-sing.html
@@ -104,8 +104,8 @@
 
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-6">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="row card-container"
                 style="background-image: url('../img/bg2.png'); background-repeat: no-repeat;background-size: cover;background-position: top center;">
                 <!-- Seção de Texto -->
