--- a/pages/terapia.html
+++ b/pages/terapia.html
@@ -98,8 +98,8 @@
 
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-6">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="services__details__pic">
                 <div class="services__details__pic">
                     <img id="img" src="../img/blog/details/blog-hero4.jpg" alt="">
@@ -118,10 +118,10 @@
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
-                            <span id="showe" class="h6"> <i class="fa fa-clock-o"></i> Duração: 40mn a 60mn <i
+                            <span id="showe" class="h6"> <i class="fa fa-clock-o"></i> Duração: 40min a 60min <i
                                     class="fa fa-user"> presencial</i>
                             </span>
-                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 40mn a 90mn <i
+                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 40min a 90min <i
                                     class="fa fa-user"> presencial</i>
                             </span>
                         </div>
@@ -136,9 +136,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold">
+                                        <h2 id="title" class="subtitle fw-bold mt-4 mb-4">
                                         </h2>
-                                        <h5 class="mt-2  h4"><b id="subtitulo">A terapia ocupacional ajuda a que o teu
+                                        <h5 class=" h4"><b id="subtitulo">A terapia ocupacional ajuda a que o teu
                                                 dia-a-dia
                                                 corra melhor! </b><a class="h6 " id="mais" href="terapia.html#F"> clique
                                                 aqui para
@@ -166,7 +166,7 @@
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="section-title">
-                                            <h5 class="mt-4"><b>Temáticas abordadas nesta consulta:</b></h5>
+                                            <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
                                             <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                         </div>
                                     </div>
@@ -451,7 +451,6 @@
                                 <!-- Título da Seção -->
 
                                 <p>
-
                                     <i>N’ A Clínica</i> sabemos que a Saúde Mental é tão ou mais importante que a saúde
                                     física. <br>
                                     A Terapia Ocupacional nesta sua vertente de promoção da saúde mental, visa ajudar
