--- a/pages/vacinacao.html
+++ b/pages/vacinacao.html
@@ -98,8 +98,8 @@
 
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-6">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="services__details__pic">
                 <div class="services__details__pic">
                     <img id="img" src="../img/blog/details/blog-hero4.jpg" alt="">
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
-                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 5mn | <i class="fa fa-user"></i>
+                            <span class="h6"> <i class="fa fa-clock-o"></i> Duração: 5min | <i class="fa fa-user"></i>
                                 presencial
                             </span>
 
@@ -226,6 +226,7 @@
                                     <br><br>
                                     Tomamos como exemplo o Plano Nacional de Vacinação de Portugal em vigor na
                                     atualidade para as seguintes recomendações:
+                                    <br>
                                 <ul class="list">
                                     <li>
                                         a) <b>Gravidez:</b> As vacinas são inativadas e a vacinação deve ocorrer, se
@@ -342,7 +343,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
                     <div class="row">
                         <div class="card shadow" style="background-image: url('../img/bg1.png');">
                             <div class="card-more">
