--- a/pages/viajante.html
+++ b/pages/viajante.html
@@ -94,8 +94,8 @@
 
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-6">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="blog__details__hero mb-4  set-bg" data-setbg="../img/blog/details/blog-hero8.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-7 text-center">
@@ -122,7 +122,7 @@
                                         <h5 class="mb-0 mt-3 h4"><b>Viajar em família é um dos prazeres da
                                                 vida!</b></h5>
                                         <br>
-                                        <p class="mb-4 mt-4"> <i>N’A Clínica</i> sabemos que viajar é uma das
+                                        <p class="mb-4"> <i>N’A Clínica</i> sabemos que viajar é uma das
                                             necessidades
                                             dos nossos pacientes. Proporcionamos, por isso, a consulta do
                                             Viajante adaptada ao seu lugar de destino, para todos os elementos da sua
@@ -135,15 +135,7 @@
                                 <div class="blog__details__text ml-4 mr-4">
                                     <div class="blog__details__text__item">
                                         <!-- Título da Seção -->
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class="section-title">
-                                                    <h5 class=""><b>Esta consulta destina-se a:</b></h5>
-                                                    <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
-                                                </div>
-                                            </div>
-                                        </div>
-
+                                        <h5 class=""><b>Esta consulta destina-se a:</b></h5>
                                         <p>Adultos ou crianças que vão viajar seja por motivos de turismo e lazer ou
                                             devido a trabalho e que queiram obter a
                                             informação mais atualizada.
@@ -161,9 +153,10 @@
                                                     determinado
                                                     procedimento cirúrgico.</a></li>
                                         </ul>
-                                        <p>
-                                            <br><br>
-                                            <b><i>Importante:</i></b> Nesta consulta recolhemos informação clínica
+                                        <div class="section-title mb-2">
+                                            <h4 class=" mb-2 mt-4"><b>! Informação importante !</b></h3>
+                                        </div>
+                                        <p>Nesta consulta recolhemos informação clínica
                                             pertinente de cada paciente. Os pacientes devem trazer sempre os boletins
                                             de vacinação de todos os elementos da família que vão viajar.
                                         </p>
