--- a/pages/workshop-amament.html
+++ b/pages/workshop-amament.html
@@ -115,8 +115,8 @@
     </header>
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-5">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/amame.jpg"
                 style="background: url('../img/blog/details/amame.jpg') no-repeat center center/cover; height: 400px;">
                 <div class="services__details__content" style="background-image: url(../img/bg4.png);">
