--- a/pages/workshop.html
+++ b/pages/workshop.html
@@ -96,8 +96,8 @@
     </header>
 
     <!-- Blog Details Section Begin -->
-    <section class="blog-details spad mt-5">
-        <div class="container mt-9">
+    <section class="blog-details spad mt-9">
+        <div class="container">
             <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/workshop.jpg"
                 style="background: url('../img/blog/details/workshop.jpg') no-repeat center center/cover; height: 400px;">
                 <div class="row d-flex justify-content-start h-100">
