--- a/pages/viajante.html
+++ b/pages/viajante.html
@@ -119,9 +119,8 @@
                                     <div class="section-title">
                                         <h2 class="subtitle fw-bolder">Medicina do Viajante
                                         </h2>
-                                        <h5 class="mb-0 mt-3 h4"><b>Viajar em família é um dos prazeres da
+                                        <h5 class=" mt-3 mb-2 h4"><b>Viajar em família é um dos prazeres da
                                                 vida!</b></h5>
-                                        <br>
                                         <p class="mb-4"> <i>N’A Clínica</i> sabemos que viajar é uma das
                                             necessidades
                                             dos nossos pacientes. Proporcionamos, por isso, a consulta do
