--- a/pages/viajante.html
+++ b/pages/viajante.html
@@ -128,10 +128,6 @@
                                             família. </p>
 
                                     </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="blog__details__text ml-4 mr-4">
                                     <div class="blog__details__text__item">
                                         <!-- Título da Seção -->
                                         <h5 class=""><b>Esta consulta destina-se a:</b></h5>
@@ -145,7 +141,8 @@
                                             <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                         </div>
                                         <ul class="list">
-                                            <li><a><i class="fa fa-check-circle"></i> Especificidades do país de destino
+                                            <li><a><i class="fa fa-check-circle"></i> Especificidades do país de
+                                                    destino
                                                     em relação a doenças e à sua prevenção, cuidados gerais e de
                                                     Nutrição.</a></li>
                                             <li><a><i class="fa fa-check-circle"></i> Técnicas que se incluem num
@@ -156,7 +153,8 @@
                                             <h4 class=" mb-2 mt-4"><b>! Informação importante !</b></h3>
                                         </div>
                                         <p>Nesta consulta recolhemos informação clínica
-                                            pertinente de cada paciente. Os pacientes devem trazer sempre os boletins
+                                            pertinente de cada paciente. Os pacientes devem trazer sempre os
+                                            boletins
                                             de vacinação de todos os elementos da família que vão viajar.
                                         </p>
                                     </div>
